--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -4,9 +4,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example usage\n",
+    "# Example usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Version check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bumbag\n",
     "\n",
-    "To use `bumbag` in a project:"
+    "print(bumbag.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `time` module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import functools\n",
+    "\n",
+    "from bumbag.time import humantime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stopwatch(func):\n",
+    "    @functools.wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        t0 = time.time()\n",
+    "        output = func(*args, **kwargs)\n",
+    "        duration = time.time() - t0\n",
+    "        print(f\"{func.__name__} took {humantime(duration)}\")\n",
+    "        return output\n",
+    "\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@stopwatch\n",
+    "def my_function():\n",
+    "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_function took 1.000491 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_function()"
    ]
   },
   {
@@ -14,16 +103,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import bumbag\n",
-    "\n",
-    "print(bumbag.__version__)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -37,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
