docs(example.ipynb): add two_set_summary as usage example

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -37,6 +37,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## `math` module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bumbag.math import two_set_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    x (n=5): {'a', 'b', 'c', ...}\n",
+      "    y (n=5): {'c', 'd', 'e', ...}\n",
+      "x | y (n=8): {'a', 'b', 'c', ...}\n",
+      "x & y (n=2): {'c', 'g'}\n",
+      "x - y (n=3): {'a', 'b', 'h'}\n",
+      "y - x (n=3): {'d', 'e', 'f'}\n",
+      "x ^ y (n=6): {'a', 'b', 'd', ...}\n",
+      "jaccard = 0.25\n",
+      "overlap = 0.4\n",
+      "disjoint?: False\n",
+      "x == y: False\n",
+      "x <= y: False\n",
+      "x <  y: False\n",
+      "y <= x: False\n",
+      "y <  x: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = {\"a\", \"c\", \"b\", \"g\", \"h\"}\n",
+    "y = {\"c\", \"d\", \"e\", \"f\", \"g\"}\n",
+    "summary = two_set_summary(x, y)\n",
+    "print(summary[\"report\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## `time` module"
    ]
   },
