docs(example.ipynb): update stopwatch example

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
     "    def wrapper(*args, **kwargs):\n",
     "        t0 = time.time()\n",
     "        output = func(*args, **kwargs)\n",
-    "        duration = time.time() - t0\n",
-    "        print(f\"{func.__name__} took {humantime(duration)}\")\n",
+    "        runtime = time.time() - t0\n",
+    "        print(f\"{func.__name__} took {humantime(runtime)}\")\n",
     "        return output\n",
     "\n",
     "    return wrapper"
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 1.000491 seconds\n"
+      "my_function took 1.000485 seconds\n"
      ]
     }
    ],
