--- a/docs/benchmark.ipynb
+++ b/docs/benchmark.ipynb
@@ -17,14 +17,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```ipython\n",
     "import pandas as pd\n",
     "\n",
-    "from bumbag import core"
+    "from bumbag import core\n",
+    "```"
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "def freq_pd(values):\n",
-      "    return pd.DataFrame(core.freq(values))\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'core' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcore\u001b[49m\u001b[38;5;241m.\u001b[39mget_source_code(freq_pd))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'core' is not defined"
      ]
     }
    ],
@@ -97,39 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "def enhanced_value_counts(values):\n",
-      "    \"\"\"Equivalent Pandas implementation of freq.\"\"\"\n",
-      "    s = pd.Series(values).value_counts(\n",
-      "        sort=True,\n",
-      "        ascending=False,\n",
-      "        bins=None,\n",
-      "        dropna=False,\n",
-      "    )\n",
-      "\n",
-      "    df = pd.DataFrame(s, columns=[\"n\"])\n",
-      "    df[\"N\"] = df[\"n\"].cumsum()\n",
-      "    df[\"r\"] = df[\"n\"] / df[\"n\"].sum()\n",
-      "    df[\"R\"] = df[\"r\"].cumsum()\n",
-      "\n",
-      "    return df\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(core.get_source_code(enhanced_value_counts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,20 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bb_output = freq_pd(values)\n",
     "pd_output = enhanced_value_counts(values)\n",
@@ -160,90 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n</th>\n",
-       "      <th>N</th>\n",
-       "      <th>r</th>\n",
-       "      <th>R</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.375</td>\n",
-       "      <td>0.375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>g</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>0.750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>0.875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>h</th>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>1.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   n  N      r      R\n",
-       "a  3  3  0.375  0.375\n",
-       "g  2  5  0.250  0.625\n",
-       "c  1  6  0.125  0.750\n",
-       "b  1  7  0.125  0.875\n",
-       "h  1  8  0.125  1.000"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bb_output"
    ]
@@ -276,20 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.2289156626506026"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "3.7 / 1.66"
    ]
