docs(benchmark.md): add markdown instead of notebook

--- a/docs/benchmark.ipynb
+++ b/docs/benchmark.ipynb
@@ -17,14 +17,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```ipython\n",
     "import pandas as pd\n",
+    "from IPython.display import HTML, display\n",
     "\n",
-    "from bumbag import core\n",
-    "```"
+    "from bumbag import core"
    ]
   },
   {
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,18 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'core' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcore\u001b[49m\u001b[38;5;241m.\u001b[39mget_source_code(freq_pd))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'core' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def freq_pd(values):\n",
+      "    return pd.DataFrame(core.freq(values))\n",
+      "\n"
      ]
     }
    ],
@@ -99,16 +98,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def enhanced_value_counts(values):\n",
+      "    \"\"\"Equivalent Pandas implementation of freq.\"\"\"\n",
+      "    s = pd.Series(values).value_counts(\n",
+      "        sort=True,\n",
+      "        ascending=False,\n",
+      "        bins=None,\n",
+      "        dropna=False,\n",
+      "    )\n",
+      "\n",
+      "    df = pd.DataFrame(s, columns=[\"n\"])\n",
+      "    df[\"N\"] = df[\"n\"].cumsum()\n",
+      "    df[\"r\"] = df[\"n\"] / df[\"n\"].sum()\n",
+      "    df[\"R\"] = df[\"r\"].cumsum()\n",
+      "\n",
+      "    return df\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(core.get_source_code(enhanced_value_counts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bb_output = freq_pd(values)\n",
     "pd_output = enhanced_value_counts(values)\n",
@@ -128,11 +161,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th style=\"min-width: 30px;\"></th>\n",
+       "      <th style=\"min-width: 30px;\">n</th>\n",
+       "      <th style=\"min-width: 30px;\">N</th>\n",
+       "      <th style=\"min-width: 30px;\">r</th>\n",
+       "      <th style=\"min-width: 30px;\">R</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "bb_output"
+    "display(HTML(bb_output.to_html(col_space=\"30px\")))"
    ]
   },
   {
@@ -163,9 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2289156626506026"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3.7 / 1.66"
    ]
@@ -182,13 +286,6 @@
     "\n",
     "![Image](./benchmark_freq_versus_value_counts.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
