refactor(*): move two_set_summary from math to core
two_set_summary is a generic function and not math-specific

BREAKING CHANGE: api change due to refactor

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `math` module"
+    "## `core` module"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bumbag.math import two_set_summary"
+    "from bumbag.core import two_set_summary"
    ]
   },
   {
@@ -140,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 1.000485 seconds\n"
+      "my_function took 1.000330 seconds\n"
      ]
     }
    ],
