docs(example.ipynb): add complex iseq leap year usage example

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -87,12 +87,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `time` module"
+    "## `math` module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task: Generate a sequence of every other leap year since 1800, where the last digit of each year is zero.\n",
+    "List the first ten elements of this sequence."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from toolz.curried import filter, pipe, take, take_nth\n",
+    "\n",
+    "from bumbag.math import iseq\n",
+    "from bumbag.time import is_leap_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_last_digit_zero(year):\n",
+    "    return str(year).endswith(\"0\")\n",
+    "\n",
+    "\n",
+    "pipe(\n",
+    "    iseq(1800),\n",
+    "    filter(is_leap_year),\n",
+    "    filter(is_last_digit_zero),\n",
+    "    take_nth(2),\n",
+    "    take(10),\n",
+    "    list,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `time` module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 1.000330 seconds\n"
+      "my_function took 1.000904 seconds\n"
      ]
     }
    ],
