docs(example.ipynb): add dseq usage example - palindrome and ambigram dates

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -198,12 +198,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 1.000904 seconds\n"
+      "my_function took 1.000186 seconds\n"
      ]
     }
    ],
    "source": [
     "my_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `dseq`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task: The digits of 22 February 2022 form [a palindrome and an ambigram](https://en.wikipedia.org/wiki/Twosday) in dd-mm-yyyy format.\n",
+    "List the next five dates with these properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "from toolz.curried import filter, map, pipe, take\n",
+    "\n",
+    "from bumbag.time import dseq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['08-02-2080 ↦ 08022080',\n",
+       " '18-02-2081 ↦ 18022081',\n",
+       " '28-02-2082 ↦ 28022082',\n",
+       " '10-12-2101 ↦ 10122101',\n",
+       " '20-12-2102 ↦ 20122102']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def format_date(date, with_dash):\n",
+    "    fmt = \"%d-%m-%Y\" if with_dash else \"%d%m%Y\"\n",
+    "    return date.strftime(fmt)\n",
+    "\n",
+    "\n",
+    "def is_palindrome_date(date):\n",
+    "    d = format_date(date, False)\n",
+    "    return d == d[::-1]\n",
+    "\n",
+    "\n",
+    "def is_ambigram_date(date):\n",
+    "    d = format_date(date, False)\n",
+    "    return set(d) <= {\"0\", \"1\", \"2\", \"8\"}\n",
+    "\n",
+    "\n",
+    "def show_date(date):\n",
+    "    return f\"{format_date(date, True)} ↦ {format_date(date, False)}\"\n",
+    "\n",
+    "\n",
+    "pipe(\n",
+    "    dseq(date(2022, 2, 23), forward=True),\n",
+    "    filter(is_palindrome_date),\n",
+    "    filter(is_ambigram_date),\n",
+    "    map(show_date),\n",
+    "    take(5),\n",
+    "    list,\n",
+    ")"
    ]
   },
   {
