docs(example.ipynb): improve structure

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -41,17 +41,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from bumbag.core import two_set_summary"
+    "### `two_set_summary`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +75,8 @@
     }
    ],
    "source": [
+    "from bumbag.core import two_set_summary\n",
+    "\n",
     "x = {\"a\", \"c\", \"b\", \"g\", \"h\"}\n",
     "y = {\"c\", \"d\", \"e\", \"f\", \"g\"}\n",
     "summary = two_set_summary(x, y)\n",
@@ -94,25 +94,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `iseq`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Task: Generate a sequence of every other leap year since 1800, where the last digit of each year is zero.\n",
     "List the first ten elements of this sequence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from toolz.curried import filter, pipe, take, take_nth\n",
-    "\n",
-    "from bumbag.math import iseq\n",
-    "from bumbag.time import is_leap_year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,12 +116,18 @@
        "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from toolz.curried import filter, pipe, take, take_nth\n",
+    "\n",
+    "from bumbag.math import iseq\n",
+    "from bumbag.time import is_leap_year\n",
+    "\n",
+    "\n",
     "def is_last_digit_zero(year):\n",
     "    return str(year).endswith(\"0\")\n",
     "\n",
@@ -149,23 +150,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `humantime`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import functools\n",
     "\n",
-    "from bumbag.time import humantime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from bumbag.time import humantime\n",
+    "\n",
+    "\n",
     "def stopwatch(func):\n",
     "    @functools.wraps(func)\n",
     "    def wrapper(*args, **kwargs):\n",
@@ -175,15 +177,9 @@
     "        print(f\"{func.__name__} took {humantime(runtime)}\")\n",
     "        return output\n",
     "\n",
-    "    return wrapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return wrapper\n",
+    "\n",
+    "\n",
     "@stopwatch\n",
     "def my_function():\n",
     "    time.sleep(1)"
@@ -191,27 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 1.000186 seconds\n"
+      "my_function took 1.002489 seconds\n"
      ]
     }
    ],
    "source": [
     "my_function()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -230,20 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import date\n",
-    "\n",
-    "from toolz.curried import filter, map, pipe, take\n",
-    "\n",
-    "from bumbag.time import dseq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,12 +232,19 @@
        " '20-12-2102 ↦ 20122102']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from datetime import date\n",
+    "\n",
+    "from toolz.curried import filter, map, pipe, take\n",
+    "\n",
+    "from bumbag.time import dseq\n",
+    "\n",
+    "\n",
     "def format_date(date, with_dash):\n",
     "    fmt = \"%d-%m-%Y\" if with_dash else \"%d%m%Y\"\n",
     "    return date.strftime(fmt)\n",
