docs(example.ipynb): add humantime context manager usage example

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -157,6 +157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use as decorator:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -182,7 +189,7 @@
     "\n",
     "@stopwatch\n",
     "def my_function():\n",
-    "    time.sleep(1)"
+    "    time.sleep(0.1)"
    ]
   },
   {
@@ -194,12 +201,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 1.002489 seconds\n"
+      "my_function took 0.100111 seconds\n"
      ]
     }
    ],
    "source": [
     "my_function()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use as context manager:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from contextlib import contextmanager\n",
+    "\n",
+    "\n",
+    "@contextmanager\n",
+    "def stopwatch():\n",
+    "    t0 = time.time()\n",
+    "    yield\n",
+    "    runtime = time.time() - t0\n",
+    "    print(f\"{humantime(runtime)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.100853 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "with stopwatch():\n",
+    "    time.sleep(0.1)"
    ]
   },
   {
@@ -219,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +282,7 @@
        " '20-12-2102 ↦ 20122102']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
