refactor(example.ipynb): add humantime import

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -225,6 +225,8 @@
     "import time\n",
     "from contextlib import contextmanager\n",
     "\n",
+    "from bumbag.time import humantime\n",
+    "\n",
     "\n",
     "@contextmanager\n",
     "def stopwatch():\n",
