--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1.0\n"
+      "1.1.0\n"
      ]
     }
    ],
@@ -65,6 +65,7 @@
       "x ^ y (n=6): {'a', 'b', 'd', ...}\n",
       "jaccard = 0.25\n",
       "overlap = 0.4\n",
+      "dice = 0.4\n",
       "disjoint?: False\n",
       "x == y: False\n",
       "x <= y: False\n",
@@ -201,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100111 seconds\n"
+      "my_function took 0.101638 seconds\n"
      ]
     }
    ],
@@ -245,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100853 seconds\n"
+      "0.105291 seconds\n"
      ]
     }
    ],
