docs(example.ipynb): add flatten as usage example

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -88,6 +88,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `flatten`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one', 2, 3, 4, 'five', 'six', 'seven', 8]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bumbag.core import flatten\n",
+    "\n",
+    "irregular_list = [\n",
+    "    [\"one\", 2],\n",
+    "    3,\n",
+    "    [(4, \"five\")],\n",
+    "    [[[\"six\"]]],\n",
+    "    \"seven\",\n",
+    "    [],\n",
+    "]\n",
+    "\n",
+    "list(flatten(irregular_list, 8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## `math` module"
    ]
   },
@@ -108,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +155,7 @@
        "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.101638 seconds\n"
+      "my_function took 0.100444 seconds\n"
      ]
     }
    ],
@@ -219,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.105291 seconds\n"
+      "0.100235 seconds\n"
      ]
     }
    ],
@@ -272,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +323,7 @@
        " '20-12-2102 ↦ 20122102']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
