feat(math.py): refactor iseq to irange
- add step argument
- add exceptions raised in docsting
- add more docstring examples

BREAKING CHANGE: refactor iseq to irange

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `iseq`"
+    "### `irange`"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "source": [
     "from toolz.curried import filter, pipe, take, take_nth\n",
     "\n",
-    "from bumbag.math import iseq\n",
+    "from bumbag.math import irange\n",
     "from bumbag.time import is_leap_year\n",
     "\n",
     "\n",
@@ -172,7 +172,7 @@
     "\n",
     "\n",
     "pipe(\n",
-    "    iseq(1800),\n",
+    "    irange(1800),\n",
     "    filter(is_leap_year),\n",
     "    filter(is_last_digit_zero),\n",
     "    take_nth(2),\n",
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100444 seconds\n"
+      "my_function took 0.100286 seconds\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100235 seconds\n"
+      "0.108293 seconds\n"
      ]
     }
    ],
