--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "['one', 2, 3, 4, 'five', 'six', 'seven', 8]"
+       "['one', 2, 3, 4, 'five', 'six', 'seven', 8, 9, 'ten']"
       ]
      },
      "execution_count": 3,
@@ -119,7 +119,7 @@
     "    [],\n",
     "]\n",
     "\n",
-    "list(flatten(irregular_list, 8))"
+    "list(flatten(irregular_list, 8, [9, (\"ten\",)]))"
    ]
   },
   {
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100286 seconds\n"
+      "my_function took 0.101221 seconds\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.108293 seconds\n"
+      "0.101286 seconds\n"
      ]
     }
    ],
