fix(time.py): deprecate is_leap_year
BREAKING CHANGE: deprecate is_leap_year

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -161,10 +161,10 @@
     }
    ],
    "source": [
+    "from calendar import isleap\n",
     "from toolz.curried import filter, pipe, take, take_nth\n",
     "\n",
     "from bumbag.math import irange\n",
-    "from bumbag.time import is_leap_year\n",
     "\n",
     "\n",
     "def is_last_digit_zero(year):\n",
@@ -173,7 +173,7 @@
     "\n",
     "pipe(\n",
     "    irange(1800),\n",
-    "    filter(is_leap_year),\n",
+    "    filter(isleap),\n",
     "    filter(is_last_digit_zero),\n",
     "    take_nth(2),\n",
     "    take(10),\n",
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.101221 seconds\n"
+      "my_function took 0.100713 seconds\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.101286 seconds\n"
+      "0.100089 seconds\n"
      ]
     }
    ],
