refactor(*): rename dseq to drange
BREAKING CHANGE: rename dseq to drange

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100713 seconds\n"
+      "my_function took 0.100199 seconds\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100089 seconds\n"
+      "0.100183 seconds\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `dseq`"
+    "### `drange`"
    ]
   },
   {
@@ -333,7 +333,7 @@
     "\n",
     "from toolz.curried import filter, map, pipe, take\n",
     "\n",
-    "from bumbag.time import dseq\n",
+    "from bumbag.time import drange\n",
     "\n",
     "\n",
     "def format_date(date, with_dash):\n",
@@ -356,7 +356,7 @@
     "\n",
     "\n",
     "pipe(\n",
-    "    dseq(date(2022, 2, 23), forward=True),\n",
+    "    drange(date(2022, 2, 23)),\n",
     "    filter(is_palindrome_date),\n",
     "    filter(is_ambigram_date),\n",
     "    map(show_date),\n",
