docs(example.ipynb): use watermark in first cell

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -8,29 +8,44 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Version check"
+    "%load_ext watermark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1.0\n"
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.13\n",
+      "IPython version      : 8.4.0\n",
+      "\n",
+      "Compiler    : GCC 7.5.0\n",
+      "OS          : Linux\n",
+      "Release     : 5.18.17-100.fc35.x86_64\n",
+      "Machine     : x86_64\n",
+      "Processor   : x86_64\n",
+      "CPU cores   : 3\n",
+      "Architecture: 64bit\n",
+      "\n",
+      "bumbag: 2.0.0\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import bumbag\n",
     "\n",
-    "print(bumbag.__version__)"
+    "%watermark -v -m --iversions"
    ]
   },
   {
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +73,7 @@
        "['one', 2, 3, 4, 'five', 'six', 'seven', 8, 9, 'ten']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +170,7 @@
        "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +233,7 @@
        " '20-12-2102 ↦ 20122102']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.101054 seconds\n"
+      "my_function took 0.100389 seconds\n"
      ]
     }
    ],
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.102506 seconds\n"
+      "0.100155 seconds\n"
      ]
     }
    ],
