--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -8,44 +8,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext watermark"
+    "## Version check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python implementation: CPython\n",
-      "Python version       : 3.8.13\n",
-      "IPython version      : 8.4.0\n",
-      "\n",
-      "Compiler    : GCC 7.5.0\n",
-      "OS          : Linux\n",
-      "Release     : 5.18.17-100.fc35.x86_64\n",
-      "Machine     : x86_64\n",
-      "Processor   : x86_64\n",
-      "CPU cores   : 3\n",
-      "Architecture: 64bit\n",
-      "\n",
-      "bumbag: 2.0.0\n",
-      "\n"
+      "2.0.0\n"
      ]
     }
    ],
    "source": [
     "import bumbag\n",
     "\n",
-    "%watermark -v -m --iversions"
+    "print(bumbag.__version__)"
    ]
   },
   {
@@ -64,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +58,7 @@
        "['one', 2, 3, 4, 'five', 'six', 'seven', 8, 9, 'ten']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +155,7 @@
        "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +218,7 @@
        " '20-12-2102 ↦ 20122102']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100389 seconds\n"
+      "my_function took 0.100737 seconds\n"
      ]
     }
    ],
@@ -344,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100155 seconds\n"
+      "0.100991 seconds\n"
      ]
     }
    ],
