--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -37,161 +37,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `core` module"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `flatten`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['one', 2, 3, 4, 'five', 'six', 'seven', 8, 9, 'ten']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from bumbag.core import flatten\n",
-    "\n",
-    "irregular_list = [\n",
-    "    [\"one\", 2],\n",
-    "    3,\n",
-    "    [(4, \"five\")],\n",
-    "    [[[\"six\"]]],\n",
-    "    \"seven\",\n",
-    "    [],\n",
-    "]\n",
-    "\n",
-    "list(flatten(irregular_list, 8, [9, (\"ten\",)]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `two_set_summary`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    x (n=5): {'a', 'b', 'c', ...}\n",
-      "    y (n=5): {'c', 'd', 'e', ...}\n",
-      "x | y (n=8): {'a', 'b', 'c', ...}\n",
-      "x & y (n=2): {'c', 'g'}\n",
-      "x - y (n=3): {'a', 'b', 'h'}\n",
-      "y - x (n=3): {'d', 'e', 'f'}\n",
-      "x ^ y (n=6): {'a', 'b', 'd', ...}\n",
-      "jaccard = 0.25\n",
-      "overlap = 0.4\n",
-      "dice = 0.4\n",
-      "disjoint?: False\n",
-      "x == y: False\n",
-      "x <= y: False\n",
-      "x <  y: False\n",
-      "y <= x: False\n",
-      "y <  x: False\n"
-     ]
-    }
-   ],
-   "source": [
-    "from bumbag.core import two_set_summary\n",
-    "\n",
-    "x = {\"a\", \"c\", \"b\", \"g\", \"h\"}\n",
-    "y = {\"c\", \"d\", \"e\", \"f\", \"g\"}\n",
-    "summary = two_set_summary(x, y)\n",
-    "print(summary[\"report\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## `math` module"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `irange`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task: Generate a sequence of every other leap year since 1800, where the last digit of each year is zero.\n",
-    "List the first ten elements of this sequence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from calendar import isleap\n",
-    "from toolz.curried import filter, pipe, take, take_nth\n",
-    "\n",
-    "from bumbag.math import irange\n",
-    "\n",
-    "\n",
-    "def is_last_digit_zero(year):\n",
-    "    return str(year).endswith(\"0\")\n",
-    "\n",
-    "\n",
-    "pipe(\n",
-    "    irange(1800),\n",
-    "    filter(isleap),\n",
-    "    filter(is_last_digit_zero),\n",
-    "    take_nth(2),\n",
-    "    take(10),\n",
-    "    list,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## `time` module"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### `drange`"
    ]
   },
@@ -205,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +63,7 @@
        " '20-12-2102 ↦ 20122102']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +73,7 @@
     "\n",
     "from toolz.curried import filter, map, pipe, take\n",
     "\n",
-    "from bumbag.time import drange\n",
+    "from bumbag import drange\n",
     "\n",
     "\n",
     "def format_date(date, with_dash):\n",
@@ -264,6 +109,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `flatten`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one', 2, 3, 4, 'five', 'six', 'seven', 8, 9, 'ten']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bumbag import flatten\n",
+    "\n",
+    "irregular_list = [\n",
+    "    [\"one\", 2],\n",
+    "    3,\n",
+    "    [(4, \"five\")],\n",
+    "    [[[\"six\"]]],\n",
+    "    \"seven\",\n",
+    "    [],\n",
+    "]\n",
+    "\n",
+    "list(flatten(irregular_list, 8, [9, (\"ten\",)]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `humantime`"
    ]
   },
@@ -276,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import functools\n",
     "\n",
-    "from bumbag.time import humantime\n",
+    "from bumbag import humantime\n",
     "\n",
     "\n",
     "def stopwatch(func):\n",
@@ -305,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100737 seconds\n"
+      "my_function took 0.101017 seconds\n"
      ]
     }
    ],
@@ -329,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "from contextlib import contextmanager\n",
     "\n",
-    "from bumbag.time import humantime\n",
+    "from bumbag import humantime\n",
     "\n",
     "\n",
     "@contextmanager\n",
@@ -349,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100991 seconds\n"
+      "0.101708 seconds\n"
      ]
     }
    ],
@@ -364,6 +247,111 @@
     "with stopwatch():\n",
     "    time.sleep(0.1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `irange`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task: Generate a sequence of every other leap year since 1800, where the last digit of each year is zero.\n",
+    "List the first ten elements of this sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from calendar import isleap\n",
+    "from toolz.curried import filter, pipe, take, take_nth\n",
+    "\n",
+    "from bumbag import irange\n",
+    "\n",
+    "\n",
+    "def is_last_digit_zero(year):\n",
+    "    return str(year).endswith(\"0\")\n",
+    "\n",
+    "\n",
+    "pipe(\n",
+    "    irange(1800),\n",
+    "    filter(isleap),\n",
+    "    filter(is_last_digit_zero),\n",
+    "    take_nth(2),\n",
+    "    take(10),\n",
+    "    list,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `two_set_summary`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    x (n=5): {'a', 'b', 'c', ...}\n",
+      "    y (n=5): {'c', 'd', 'e', ...}\n",
+      "x | y (n=8): {'a', 'b', 'c', ...}\n",
+      "x & y (n=2): {'c', 'g'}\n",
+      "x - y (n=3): {'a', 'b', 'h'}\n",
+      "y - x (n=3): {'d', 'e', 'f'}\n",
+      "x ^ y (n=6): {'a', 'b', 'd', ...}\n",
+      "jaccard = 0.25\n",
+      "overlap = 0.4\n",
+      "dice = 0.4\n",
+      "disjoint?: False\n",
+      "x == y: False\n",
+      "x <= y: False\n",
+      "x <  y: False\n",
+      "y <= x: False\n",
+      "y <  x: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bumbag import two_set_summary\n",
+    "\n",
+    "x = {\"a\", \"c\", \"b\", \"g\", \"h\"}\n",
+    "y = {\"c\", \"d\", \"e\", \"f\", \"g\"}\n",
+    "summary = two_set_summary(x, y)\n",
+    "print(summary[\"report\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
