--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0.0\n"
+      "3.2.0\n"
      ]
     }
    ],
@@ -71,9 +71,9 @@
    "source": [
     "from datetime import date\n",
     "\n",
-    "from toolz.curried import filter, map, pipe, take\n",
+    "from toolz import curried\n",
     "\n",
-    "from bumbag import drange\n",
+    "import bumbag\n",
     "\n",
     "\n",
     "def format_date(date, with_dash):\n",
@@ -95,12 +95,12 @@
     "    return f\"{format_date(date, True)} ↦ {format_date(date, False)}\"\n",
     "\n",
     "\n",
-    "pipe(\n",
-    "    drange(date(2022, 2, 23)),\n",
-    "    filter(is_palindrome_date),\n",
-    "    filter(is_ambigram_date),\n",
-    "    map(show_date),\n",
-    "    take(5),\n",
+    "curried.pipe(\n",
+    "    bumbag.drange(date(2022, 2, 23)),\n",
+    "    curried.filter(is_palindrome_date),\n",
+    "    curried.filter(is_ambigram_date),\n",
+    "    curried.map(show_date),\n",
+    "    curried.take(5),\n",
     "    list,\n",
     ")"
    ]
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "from bumbag import flatten\n",
+    "import bumbag\n",
     "\n",
     "irregular_list = [\n",
     "    [\"one\", 2],\n",
@@ -140,7 +140,7 @@
     "    [],\n",
     "]\n",
     "\n",
-    "list(flatten(irregular_list, 8, [9, (\"ten\",)]))"
+    "list(bumbag.flatten(irregular_list, 8, [9, (\"ten\",)]))"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "import time\n",
     "import functools\n",
     "\n",
-    "from bumbag import humantime\n",
+    "import bumbag\n",
     "\n",
     "\n",
     "def stopwatch(func):\n",
@@ -175,7 +175,7 @@
     "        t0 = time.time()\n",
     "        output = func(*args, **kwargs)\n",
     "        runtime = time.time() - t0\n",
-    "        print(f\"{func.__name__} took {humantime(runtime)}\")\n",
+    "        print(f\"{func.__name__} took {bumbag.humantime(runtime)}\")\n",
     "        return output\n",
     "\n",
     "    return wrapper\n",
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.101017 seconds\n"
+      "my_function took 0.100619 seconds\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
     "import time\n",
     "from contextlib import contextmanager\n",
     "\n",
-    "from bumbag import humantime\n",
+    "import bumbag\n",
     "\n",
     "\n",
     "@contextmanager\n",
@@ -227,7 +227,7 @@
     "    t0 = time.time()\n",
     "    yield\n",
     "    runtime = time.time() - t0\n",
-    "    print(f\"{humantime(runtime)}\")"
+    "    print(f\"{bumbag.humantime(runtime)}\")"
    ]
   },
   {
@@ -239,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.101708 seconds\n"
+      "0.100566 seconds\n"
      ]
     }
    ],
@@ -252,64 +252,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `irange`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task: Generate a sequence of every other leap year since 1800, where the last digit of each year is zero.\n",
-    "List the first ten elements of this sequence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1820, 1860, 1920, 1960, 2000, 2040, 2080, 2140, 2180, 2240]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from calendar import isleap\n",
-    "from toolz.curried import filter, pipe, take, take_nth\n",
-    "\n",
-    "from bumbag import irange\n",
-    "\n",
-    "\n",
-    "def is_last_digit_zero(year):\n",
-    "    return str(year).endswith(\"0\")\n",
-    "\n",
-    "\n",
-    "pipe(\n",
-    "    irange(1800),\n",
-    "    filter(isleap),\n",
-    "    filter(is_last_digit_zero),\n",
-    "    take_nth(2),\n",
-    "    take(10),\n",
-    "    list,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### `two_set_summary`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -338,11 +286,11 @@
     }
    ],
    "source": [
-    "from bumbag import two_set_summary\n",
+    "import bumbag\n",
     "\n",
     "x = {\"a\", \"c\", \"b\", \"g\", \"h\"}\n",
     "y = {\"c\", \"d\", \"e\", \"f\", \"g\"}\n",
-    "summary = two_set_summary(x, y)\n",
+    "summary = bumbag.two_set_summary(x, y)\n",
     "print(summary[\"report\"])"
    ]
   },
@@ -370,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
