feat(daycount): refactor drange to daycount
BREAKING CHANGE: refactor drange to daycount to be consistent with itertools.count

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `drange`"
+    "### `daycount`"
    ]
   },
   {
@@ -96,7 +96,7 @@
     "\n",
     "\n",
     "curried.pipe(\n",
-    "    bumbag.drange(date(2022, 2, 23)),\n",
+    "    bumbag.daycount(date(2022, 2, 23)),\n",
     "    curried.filter(is_palindrome_date),\n",
     "    curried.filter(is_ambigram_date),\n",
     "    curried.map(show_date),\n",
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100619 seconds\n"
+      "my_function took 0.100214 seconds\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100566 seconds\n"
+      "0.100247 seconds\n"
      ]
     }
    ],
