refactor(humantime): use time abbreviations in output string

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.2.0\n"
+      "4.0.0\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100214 seconds\n"
+      "my_function took 0.100308s\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100247 seconds\n"
+      "0.100497s\n"
      ]
     }
    ],
