feat(string.py): add highlight_string_differences

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -147,6 +147,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `highlight_string_differences`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use in an `assert` statement to get more information:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_9834/2673887967.py\", line 9, in <cell line: 8>\n",
+      "    assert lft_str == rgt_str\n",
+      "AssertionError\n"
+     ]
+    }
+   ],
+   "source": [
+    "import traceback\n",
+    "\n",
+    "import bumbag\n",
+    "\n",
+    "lft_str = \"hello\"\n",
+    "rgt_str = \"hall\"\n",
+    "\n",
+    "try:\n",
+    "    assert lft_str == rgt_str\n",
+    "except AssertionError:\n",
+    "    traceback.print_exc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_9834/3045608302.py\", line 6, in <cell line: 5>\n",
+      "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
+      "AssertionError: \n",
+      "hello\n",
+      " |  |\n",
+      "hall\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_string_diff(lft_str, rgt_str):\n",
+    "    return \"\\n\" + bumbag.highlight_string_differences(lft_str, rgt_str)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
+    "except AssertionError:\n",
+    "    traceback.print_exc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `humantime`"
    ]
   },
@@ -159,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100308s\n"
+      "my_function took 0.100186s\n"
      ]
     }
    ],
@@ -212,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100497s\n"
+      "0.100639s\n"
      ]
     }
    ],
@@ -257,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -293,13 +367,6 @@
     "summary = bumbag.two_set_summary(x, y)\n",
     "print(summary[\"report\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
