docs(example.ipynb): improve example usage of highlight_string_differences

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -161,30 +161,21 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_9834/2673887967.py\", line 9, in <cell line: 8>\n",
-      "    assert lft_str == rgt_str\n",
-      "AssertionError\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import traceback\n",
     "\n",
     "import bumbag\n",
     "\n",
     "lft_str = \"hello\"\n",
-    "rgt_str = \"hall\"\n",
-    "\n",
-    "try:\n",
-    "    assert lft_str == rgt_str\n",
-    "except AssertionError:\n",
-    "    traceback.print_exc()"
+    "rgt_str = \"hallo\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common approach to print values might not be informative enough for subtle differences."
    ]
   },
   {
@@ -197,18 +188,48 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_9834/3045608302.py\", line 6, in <cell line: 5>\n",
+      "  File \"/tmp/ipykernel_4458/54865336.py\", line 2, in <cell line: 1>\n",
+      "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
+      "AssertionError: hello != hallo\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
+    "except AssertionError:\n",
+    "    traceback.print_exc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With `highlight_string_differences`, it is easier to spot subtle differences."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_4458/3146876844.py\", line 6, in <cell line: 5>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
-      "AssertionError: \n",
+      "AssertionError: lft_str != rgt_str\n",
       "hello\n",
-      " |  |\n",
-      "hall\n"
+      " |   \n",
+      "hallo\n"
      ]
     }
    ],
    "source": [
     "def get_string_diff(lft_str, rgt_str):\n",
-    "    return \"\\n\" + bumbag.highlight_string_differences(lft_str, rgt_str)\n",
+    "    return \"lft_str != rgt_str\\n\" + bumbag.highlight_string_differences(lft_str, rgt_str)\n",
     "\n",
     "\n",
     "try:\n",
@@ -233,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_function took 0.100186s\n"
+      "my_function took 0.100243s\n"
      ]
     }
    ],
@@ -286,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100639s\n"
+      "0.100265s\n"
      ]
     }
    ],
@@ -331,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
